# SafeCampus-PUCP

./: .env.example  .gitignore  AGENTS.md  README.md  fast.txt  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.claude/: settings.json  (+1 more)
apps/backend/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260413_0001_init_schemas_enums.py  20260413_0002_baseline_initial_ddl_alignment.py  20260423_0003_users_oauth_sync.py  20260423_0004_add_departamento_to_usuario.py  20260424_0005_incidentes_rbac_alignment.py  20260513_0006_add_expediente_cierre.py  20260513_0006_incidente_expediente_cierre.py  20260513_0007_incidente_descripcion_nullable.py  20260513_0007_omnicanal_conversaciones.py  20260513_0008_chatbot_estado_conversacion.py  20260513_0010_chatbot_llm_usage.py  20260514_0011_lost_found_operativo.py  20260514_0012_lost_found_seed_categories.py  20260514_0013_lost_found_canonicalize_categories.py  20260514_0014_create_sc_maestros_ubicacion_maestra.py  20260514_0015_seed_ubicacion_maestra.py  20260514_0016_create_sc_alertas.py  20260514_0017_align_alertas_t090_t091_t092.py  20260514_0018_add_tipo_ubicacion_maestra.py  20260530_0016_legacy_remote_marker.py  20260530_0016_lost_found_chat_pwa.py  20260622_0019_auditoria_indices.py  (+18 more)
apps/backend/app/: __init__.py  main.py
apps/backend/scripts/: README.md  check_model_coverage.py  create_dev_community_user.py  seed_test_users.py  send_test_email.py  start-backend-lan.mjs
apps/backend/tests/: __init__.py  conftest.py
(+521 files in other folders)
